2007-06-08 [wwp]	2.9.2cvs48

	* src/common/socket.c
		Don't crash if fork() fails, thanks to Colin.

2007-06-08 [wwp]	2.9.2cvs47

	* src/gtk/prefswindow.c
		Wrap some long lines, and reset horizontal scroller's adjusment
		(this was already done, vertically), when changing tab (not page)
		in prefs windows.

2007-06-08 [paul]	2.9.2cvs46

	* src/common/utils.c
		use gethostname() instead of uname()
		based on a patch by Michael Hughes
		<Sylpheed-Claws_user@thehugheslogcabin.net>

2007-06-07 [wwp]	2.9.2cvs45

	* src/prefs_common.c
		Fix some useless warnings, thanks to Colin.

2007-06-06 [colin]	2.9.2cvs44

	* src/ldapupdate.c
		Fix strange allocations. 

2007-06-06 [colin]	2.9.2cvs43

	* src/ldapupdate.c
		Patch by Michael Rasmussus to help
		bug 1232

2007-06-05 [wwp]	2.9.2cvs42

	* src/prefs_account.c
	* src/prefs_folder_item.c
	* src/prefs_quote.c
	* src/quote_fmt.c
	* src/quote_fmt.h
		Per-folder templates can now be applied recursively.
		Always save per-folder templates (formats were erroneously
		saved only if they were enabled).
		Check for validity of quotation marks everywhere there
		are defined.

2007-06-05 [wwp]	2.9.2cvs41

	* src/inc.c
		Fix incoming messages from local accounts always getting filtered
		(even if the account prefs say don't), thanks to Colin.

2007-06-05 [wwp]	2.9.2cvs40

	* src/compose.c
	* src/compose.h
		Use per-folder/per-account quote chars when applying a
		template or inserting text as well. Const'ify some
		vars more.

2007-06-04 [colin]	2.9.2cvs39

	* src/compose.c
		More work for wwp :)

2007-06-04 [wwp]	2.9.2cvs38

	* src/compose.c
		Same as 2.9.2cvs36 but for forwarding.

2007-06-04 [colin]	2.9.2cvs37

	* src/compose.c
		Use original mail file for forward/redirect
		Fixes some forwarded mails to be attached as
		application/octet-stream (when they have binary
		parts), and incidentally fixes bug 848
		'Redirect breaks GnuPG'

2007-06-04 [wwp]	2.9.2cvs36

	* src/compose.c