@@ -2624,3 +2624,4 @@
 ( cvs diff -u -r 1.36.2.103 -r 1.36.2.104 src/common/utils.c;  ) > 2.9.2cvs46.patchset
 ( cvs diff -u -r 1.12.2.34 -r 1.12.2.35 src/gtk/prefswindow.c;  ) > 2.9.2cvs47.patchset
 ( cvs diff -u -r 1.13.2.32 -r 1.13.2.33 src/common/socket.c;  ) > 2.9.2cvs48.patchset
+( cvs diff -u -r 1.105.2.101 -r 1.105.2.102 src/prefs_account.c;  cvs diff -u -r 1.12.2.35 -r 1.12.2.36 src/gtk/prefswindow.c;  cvs diff -u -r 1.7.2.9 -r 1.7.2.10 src/gtk/prefswindow.h;  ) > 2.9.2cvs49.patchset
