@@ -49,7 +49,7 @@ void prefswindow_open_full		(const gchar *title,
 					 gpointer data,
 					 GtkDestroyNotify func,
 					 gint *save_width, gint *save_height,
-					 gboolean preload_pages);
+					 gboolean preload_pages, gboolean activate_child);
 
 void prefswindow_open			(const gchar *title, 
 					 GSList *prefs_pages,
