@@ -3327,7 +3327,7 @@ PrefsAccount *prefs_account_open(PrefsAccount *ac_prefs, gboolean *dirty)
 
 	prefswindow_open_full(title, prefs_pages, ac_prefs, destroy_dialog,
 			&prefs_common.editaccountwin_width, &prefs_common.editaccountwin_height,
-			TRUE);
+			TRUE, TRUE);
 	g_free(title);
 	gtk_main();
 
